try to run scsynth with args
- seems we had flags on emcmake that were never passed to emcc
- we have a strange linker error regarding shared memory
- now with shared memory actually enabled, we cannot run in Firefox
  without user adjustments
- in Chromium, there is an error enumerating audio/video devices
- some problem now in boost

    at boost::interprocess::rbtree_best_fit<boost::interprocess::mutex_family, boost::interprocess::offset_ptr<void, long, unsigned long, 0ul>, 0ul>::priv_add_segment(void*, unsigned long) (http://0.0.0.0:8000/scsynth.wasm:wasm-function[4452]:0xceebe)

This may be a problem due to assuming _no_ shared memory in previous
preprocessor tuning; perhaps we need to remove those diversions again

--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -286,6 +286,11 @@ if(AUDIOAPI STREQUAL bela)
     target_link_libraries(scsynth ${XENOMAI_LIBRARIES} ${BELA_LIBRARIES} belaextra)
 endif()
 
+if (EMSCRIPTEN)
+	set_target_properties(scsynth PROPERTIES LINK_FLAGS 
+		"--pre-js ${CMAKE_SOURCE_DIR}/wasm/pre.js -s USE_PTHREADS=1 -s WASM=1 -s INITIAL_MEMORY=33554432 -Wl,--shared-memory,--no-check-features")
+endif()
+
 if (PTHREADS_FOUND)
     target_link_libraries(scsynth ${PTHREADS_LIBRARIES})
 endif()
