step; disable assertion in boost

--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -40,6 +40,11 @@ if(NOT SYSTEM_BOOST) # we compile boost ourselves
 	add_library(boost_regex_lib STATIC EXCLUDE_FROM_ALL ${boost_regex_src})
 	target_include_directories(boost_regex_lib PUBLIC boost)
 
+	if(EMSCRIPTEN)
+		set_property(TARGET boost_program_options_lib boost_system_lib boost_filesystem_lib
+					 APPEND PROPERTY COMPILE_FLAGS "-pthread -s USE_PTHREADS=1 -s WASM=1")
+	endif()
+
 	add_library(boost_thread_lib STATIC EXCLUDE_FROM_ALL ${boost_thread_src} ${boost_thread_platform})
 	target_link_libraries(boost_thread_lib boost_system_lib)
 #	target_compile_definitions(boost_thread PUBLIC BOOST_THREAD_DONT_PROVIDE_INTERRUPTIONS)
