plugins are statically linking!
- DiskIO is disabled because we currently don't build with libsndfile
  (perhaps it's possible -- I don't remember why I had to disable it)

--- a/server/plugins/CMakeLists.txt
+++ b/server/plugins/CMakeLists.txt
@@ -355,4 +355,5 @@ endif()
 set_property(TARGET ${plugins} ${supernova_plugins} PROPERTY FOLDER UnitGenerators)
 
 set(plugins "${plugins}" PARENT_SCOPE)
+set(plugin_sources "${plugin_sources}" PARENT_SCOPE)
 set(supernova_plugins "${supernova_plugins}" PARENT_SCOPE)
