--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -312,3 +312,87 @@ jobs:
           name: ${{ env.ARTIFACT_FILE }}
           path: ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE }}
           retention-days: 7 # quickly remove test artifacts
+
+  test:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+
+          - name: macOS
+            runs-on: macos-10.15
+            sclang: 'build/Install/SuperCollider/SuperCollider.app/Contents/MacOS/sclang'
+            artifact-suffix: macOS
+
+          - name: Linux
+            runs-on: ubuntu-18.04
+            sclang: 'build/Install/bin/sclang'
+            artifact-suffix: linux-bionic-gcc10
+
+    needs: [lint, Linux, macOS] # unfortunately we can't use matrix expression here to make Linux test depend only on Linux build
+    runs-on: '${{ matrix.runs-on }}'
+    name: 'test on ${{ matrix.name }}'
+    env:
+      INSTALL_PATH: ${{ github.workspace }}/build/Install
+      ARTIFACT_FILE: 'SuperCollider-${{ needs.lint.outputs.sc-version }}-${{ matrix.artifact-suffix }}.zip'
+      QUARKS_PATH: ${{ github.workspace }}/build/Quarks
+      TESTS_PATH: ${{ github.workspace }}/testsuite/classlibrary
+      SCLANG: ${{ github.workspace }}/${{ matrix.sclang }}
+      SCRIPT_PROTO: ${{ github.workspace }}/testsuite/scripts/gha_test_run_proto.json
+      SCRIPT_RUN: ${{ github.workspace }}/testsuite/scripts/run/gha_test_run.json
+      QPM_URL: git+https://github.com/supercollider/qpm.git@topic/xvfb-off
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: false # don't need submodules for testing
+      - name: download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ env.ARTIFACT_FILE }}
+          path: ${{ env.INSTALL_PATH }}
+      - name: extract artifact
+        run: |
+          cd $INSTALL_PATH
+          echo `pwd`
+          echo `ls -s`
+          unzip $ARTIFACT_FILE
+      - name: setup Linux environment
+        if: runner.os == 'Linux'
+        run: |
+          # install dependencies
+          sudo apt-get update
+          sudo apt-get install --yes libsndfile1 libavahi-client-dev libfftw3-dev libicu-dev libudev-dev qt5-default qtwebengine5-dev jackd1
+
+          # add bin to PATH so qpm can find scsynth
+          echo "$INSTALL_PATH/bin" >> $GITHUB_PATH
+
+          # start jack
+          jackd --no-realtime -d dummy &
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '2.x'
+      - name: prepare tests
+        run: |
+          echo `python --version` # check version
+          sudo pip install $QPM_URL
+
+          # install API quark
+          mkdir $QUARKS_PATH && cd $QUARKS_PATH
+          git clone --depth=1 https://github.com/supercollider-quarks/API
+
+          # make working copy of the script
+          cp $SCRIPT_PROTO $SCRIPT_RUN
+      - name: run tests on Linux
+        if: runner.os == 'Linux'
+        env:
+          PYCHARM_HOSTED: 1 # enable color output
+          QPM_DEBUG: 1
+          QT_PLATFORM_PLUGIN: 'offscreen'
+        run: xvfb-run --server-args="-screen 0, 1280x720x24" -a qpm test.run -l $SCRIPT_RUN --path $SCLANG --include $QUARKS_PATH $TESTS_PATH
+      - name: run tests on macOS
+        if: runner.os == 'macOS'
+        env:
+          PYCHARM_HOSTED: 1 # enable color output
+          QPM_DEBUG: 1
+        run: qpm test.run -l $SCRIPT_RUN --path $SCLANG --include $QUARKS_PATH $TESTS_PATH
