--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -577,6 +577,7 @@ jobs:
             upload-to-s3: true
             s3-os-name: osx
             s3-artifact-suffx: ''
+            artifact-extension: 'zip'
             s3-create-latest-link: true # create link to pointing to the "latest" build; activate only one per branch per s3-os-name
 
           - artifact-suffix: win32
@@ -584,6 +585,7 @@ jobs:
             upload-to-s3: true
             s3-os-name: win32
             s3-artifact-suffx: ''
+            artifact-extension: 'zip'
             s3-create-latest-link: true # create link to pointing to the "latest" build
 
           - artifact-suffix: win32-installer
@@ -595,6 +597,7 @@ jobs:
             upload-to-s3: true
             s3-os-name: win64
             s3-artifact-suffx: ''
+            artifact-extension: 'zip'
             s3-create-latest-link: true # create link to pointing to the "latest" build
 
           - artifact-suffix: win64-installer
@@ -612,7 +615,7 @@ jobs:
       UPLOAD_TO_S3: ${{ matrix.upload-to-s3 && (secrets.S3_ACCESS_KEY_ID != 0) && !startsWith(github.ref, 'refs/tags/') }}
       S3_CREATE_LATEST_LINK: ${{ matrix.s3-create-latest-link && matrix.upload-to-s3 && (secrets.S3_ACCESS_KEY_ID != 0) && startsWith(github.ref, 'refs/heads/') }}
       S3_ARTIFACT_PATH: ${{ github.workspace }}/build/s3-upload
-      S3_ARTIFACT_NAME: SC-${{ github.sha }}${{ matrix.s3-artifact-suffx }}.zip
+      S3_ARTIFACT_NAME: SC-${{ github.sha }}${{ matrix.s3-artifact-suffx }}.${{ matrix.artifact-extension }}
       S3_BUILD_LOCATION: builds/supercollider/supercollider/${{ matrix.s3-os-name }}
       S3_ROOT_URL: 'https://supercollider.s3.amazonaws.com'
     steps:
@@ -626,7 +629,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: env.UPLOAD_TO_GH_RELEASE == 'true'
         with:
-          files: ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE }}.zip
+          files: ${{ env.INSTALL_PATH }}/*.*
           draft: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -634,7 +637,7 @@ jobs:
         if: env.UPLOAD_TO_S3 == 'true'
         run: |
           mkdir $S3_ARTIFACT_PATH
-          mv $INSTALL_PATH/$ARTIFACT_FILE.zip $S3_ARTIFACT_PATH/$S3_ARTIFACT_NAME
+          mv $INSTALL_PATH/*.* $S3_ARTIFACT_PATH/$S3_ARTIFACT_NAME
           
           # set S3_BUILD_LOCATION 
           echo 'S3_BUILD_URL<<EOF' >> $GITHUB_ENV
