--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -281,7 +281,7 @@ jobs:
         run: brew install yaml-cpp boost
       - name: install qt from homebrew
         if: '!matrix.qt-version'
-        run: brew install qt
+        run: brew install qt5
 
       - name: configure
         env:
