--- a/editors/sc-ide/CMakeLists.txt
+++ b/editors/sc-ide/CMakeLists.txt
@@ -1,7 +1,3 @@
-# This makes sclang/scide work with a Qt installation at a fixed, non-system location.
-SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
 set(QT_IDE_COMPONENTS
     Concurrent
     Core
@@ -347,6 +343,9 @@ target_link_libraries( SuperCollider libscide)
 target_link_libraries( libscide PUBLIC boost_system_lib boost_filesystem_lib)
 include_directories(${boost_include_dirs})
 
+# This makes sclang/scide work with a Qt installation at a fixed location.
+set_property(TARGET libscide PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 if(APPLE)
     target_link_libraries( libscide PUBLIC "-framework CoreServices -framework Foundation")
     target_link_libraries( libscide PUBLIC "-framework Cocoa" )
@@ -364,6 +363,9 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
     include_directories(${X11_INCLUDE_DIR})
     target_link_libraries(libscide PUBLIC ${X11_X11_LIB})
+
+    # This makes sclang/scide work with a Qt installation at a fixed location.
+    set_property(TARGET libscide PROPERTY INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 endif()
 
 if(PTHREADS_FOUND)
