update uses of master/slave terminology
mostly master->main

part of https://github.com/supercollider/supercollider/issues/5251

--- a/package/contributor-list-generator/package.json
+++ b/package/contributor-list-generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "supercollider",
   "version": "1.0.0",
-  "description": "[![Build Status](https://travis-ci.org/supercollider/supercollider.svg?branch=master)](https://travis-ci.org/supercollider/supercollider)",
+  "description": "",
   "main": "changelog.js",
   "directories": {
     "example": "examples"
