Use cmake's FindPkgConfig to find jack
server/{scsynth,supernova}/CMakeLists.txt:
Use cmake's `FindPkgConfig` to find jack via `pkg_check_modules` instead
of relying on the obsolete custom implementation in
`cmake_modules/FindJack.cmake`.
Introduce a hack for Windows, that allows providing
`JACK_LINK_LIBRARIES` and `JACK_INCLUDE_DIRS` via setting the
(Windows-only) options `_JACK_LINK_LIBRARIES` and `_JACK_INCLUDE_DIRS`
(respectively).

--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -38,10 +38,16 @@ if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|bela)$")
 endif()
 
 if(AUDIOAPI STREQUAL jack)
-  find_package(Jack)
-  if(NOT JACK_FOUND)
-    message(FATAL_ERROR "Jack selected as audio API, but development files not found")
+  # NOTE: this is a workaround for Windows if pkgconfig is not available
+  if(WIN32 AND _JACK_LINK_LIBRARIES AND _JACK_INCLUDE_DIRS)
+    set(JACK_LINK_LIBRARIES ${_JACK_LINK_LIBRARIES})
+    set(JACK_INCLUDE_DIRS ${_JACK_INCLUDE_DIRS})
+  else()
+    include(FindPkgConfig)
+    pkg_check_modules(JACK REQUIRED jack)
   endif()
+  message(STATUS "Using JACK_LINK_LIBRARIES: ${JACK_LINK_LIBRARIES}")
+  message(STATUS "Using JACK_INCLUDE_DIRS: ${JACK_INCLUDE_DIRS}")
 elseif(AUDIOAPI STREQUAL portaudio AND SYSTEM_PORTAUDIO)
     find_package(Portaudio)
     if(NOT PORTAUDIO_FOUND)
@@ -133,7 +139,7 @@ include_directories (${CMAKE_SOURCE_DIR}/external_libraries/boost_sync/include)
 
 if (AUDIOAPI STREQUAL jack)
 	list(APPEND scsynth_sources SC_Jack.cpp)
-	add_definitions("-DSC_AUDIO_API=SC_AUDIO_API_JACK" ${JACK_DEFINITIONS})
+	add_definitions("-DSC_AUDIO_API=SC_AUDIO_API_JACK")
 	include_directories(${JACK_INCLUDE_DIRS})
 elseif (AUDIOAPI STREQUAL portaudio)
 	list(APPEND scsynth_sources SC_PortAudio.cpp ${CMAKE_SOURCE_DIR}/common/SC_PaUtils.cpp)
@@ -216,7 +222,7 @@ endif()
 
 
 if (AUDIOAPI STREQUAL jack)
-	target_link_libraries(libscsynth ${JACK_LIBRARIES})
+	target_link_libraries(libscsynth ${JACK_LINK_LIBRARIES})
 elseif(AUDIOAPI STREQUAL portaudio)
 	target_link_libraries(libscsynth ${PORTAUDIO_LIBRARIES})
 elseif(AUDIOAPI STREQUAL bela)
