--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -144,20 +144,25 @@ if(AUDIOAPI STREQUAL "coreaudio")
 endif()
 
 if(AUDIOAPI STREQUAL jack)
-    find_package(Jack REQUIRED)
+    # NOTE: this is a workaround for Windows if pkgconfig is not available
+    if(WIN32 AND _JACK_LINK_LIBRARIES AND _JACK_INCLUDE_DIRS)
+      set(JACK_LINK_LIBRARIES ${_JACK_LINK_LIBRARIES})
+      set(JACK_INCLUDE_DIRS ${_JACK_INCLUDE_DIRS})
+    else()
+      include(FindPkgConfig)
+      pkg_check_modules(JACK REQUIRED jack)
+    endif()
+    message(STATUS "Using JACK_LINK_LIBRARIES: ${JACK_LINK_LIBRARIES}")
+    message(STATUS "Using JACK_INCLUDE_DIRS: ${JACK_INCLUDE_DIRS}")
+    target_compile_definitions(libsupernova PUBLIC JACK_BACKEND)
+    target_link_libraries(libsupernova ${JACK_LINK_LIBRARIES})
+    target_include_directories(libsupernova PUBLIC ${JACK_INCLUDE_DIRS})
 elseif(AUDIOAPI STREQUAL portaudio AND SYSTEM_PORTAUDIO)
     find_package(Portaudio REQUIRED)
 endif()
 message(STATUS "Audio API (supernova): ${AUDIOAPI}")
 
-if(AUDIOAPI STREQUAL jack)
-    find_library(JACK NAMES jack)
-    if(JACK)
-        target_compile_definitions(libsupernova PUBLIC JACK_BACKEND)
-        target_link_libraries(libsupernova ${JACK})
-        target_include_directories(libsupernova PUBLIC ${JACK_INCLUDE_DIRS})
-    endif()
-elseif(AUDIOAPI STREQUAL portaudio)
+if(AUDIOAPI STREQUAL portaudio)
     target_sources(libsupernova PUBLIC ${CMAKE_SOURCE_DIR}/common/SC_PaUtils.cpp)
     target_include_directories(libsupernova PUBLIC ${PORTAUDIO_INCLUDE_DIRS})
     target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND ${PORTAUDIO_DEFINITIONS})
