GHA Windows: use CMAKE_TOOLCHAIN_FILE when using vcpkg

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -491,7 +491,10 @@ jobs:
 
           mkdir $BUILD_PATH && cd $BUILD_PATH
 
-          cmake -G "${{ matrix.cmake-generator }}" -A "${{ matrix.cmake-arch }}" -D CMAKE_PREFIX_PATH="$Qt5_DIR;$VCPKG_INSTALLATION_ROOT/installed/${{ matrix.vcpkg-triplet }}" -D SUPERNOVA=ON -D SC_USE_QTWEBENGINE=${{ matrix.use-qtwebengine }} -D SC_ABLETON_LINK=${{ matrix.ableton-link }} -D CMAKE_BUILD_TYPE=Release .. # build type is specified here for MinGW build
+          EXTRA_CMAKE_FLAGS=
+          if [[ -n "${{ matrix.vcpkg-triplet }}" ]]; then EXTRA_CMAKE_FLAGS="-D CMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake $EXTRA_CMAKE_FLAGS"; fi
+
+          cmake -G "${{ matrix.cmake-generator }}" -A "${{ matrix.cmake-arch }}" -D CMAKE_PREFIX_PATH=$Qt5_DIR -D SUPERNOVA=ON -D SC_USE_QTWEBENGINE=${{ matrix.use-qtwebengine }} -D SC_ABLETON_LINK=${{ matrix.ableton-link }} -D CMAKE_BUILD_TYPE=Release $EXTRA_CMAKE_FLAGS .. # build type is specified here for MinGW build
 
       - name: build
         shell: bash
